# ThreatAtlas

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/api/: main.py
apps/runner/: batch_runner.py  execute_suite.py  run_single_case.py
core/attacks/: generators.py  loaders.py  mutators.py  taxonomies.py
core/evaluation/: grounding.py  hallucination.py  policy_engine.py  safety_checks.py  scorers.py
core/guardrails/: output_validation.py  pii.py  prompt_injection.py  tool_safety.py
core/reporting/: exporters.py  metrics.py  summaries.py
core/retrieval/: bm25.py  embeddings.py  hybrid.py  ingest.py
core/targets/: agent_target.py  base.py  mock_target.py  openai_target.py  rag_target.py
data/policies/: atlas_mapping.yaml  grounding_policy.yaml  safety_policy.yaml  tool_policy.yaml
docker/: Dockerfile
docs/: architecture.md  attack_taxonomy.md  dataset_design.md  evaluation_methodology.md  evaluation_plan.md  source_inventory.md  taxonomy.md  threat_model.md
notebooks/: attack_category_analysis.ipynb  corpus_quality_checks.ipynb  dataset_exploration.ipynb
scripts/: build_attack_corpus.py  generate_report.py  inspect_hf_dataset.py  normalize_antijection.py  normalize_mindgard.py  normalize_neuralchemy.py  normalize_system_leakage.py  normalize_wildjailbreak.py  preview_random_samples.py  run_benchmark.py  seed_attacks.py  summarize_manifest.py  validate_attack_corpus.py
src/: __init__.py
src/api/: __init__.py  main.py  models.py
tests/: test_backfills.py  test_build_pipeline.py  test_normalizers.py  test_schema.py
(+29 files in other folders)
